# incendio

./: .gitignore  Cargo.toml  LICENSE  README.md
scripts/: cloud-init.sh  generate-client.sh  generate-server.sh
